--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,22 +9,22 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body class="bg-[#f0f0f0] flex items-end text-neutral-700">
-		<nav class="absolute top-0 right-0 text-right p-16 text-lg underline ">
-			<ol>
+		<nav class="absolute top-0 right-0 text-right p-8 lg:p-16 text-lg underline ">
+			<ol class="space-y-2">
 				<li>members -</li>
 				<li>audits -</li>
 				<li>blogs -</li>
 			</ol>
 		</nav>
 
-		<div class="w-full flex h-1/2">
-			<div class="flex-1" />
-			<main class="flex-1 border-l border-l-black px-16">
-				<h1 class="text-6xl leading-none tracking-tight mb-6">
-					<span class="opacity-50">we are</span><br />
-					Kenshū.
+		<div class="w-full flex min-h-1/2">
+			<div class="flex-1 hidden lg:block" />
+			<main class="flex-1 lg:border-l border-l-black px-8 lg:px-16">
+				<h1 class="text-5xl sm:text-6xl leading-none tracking-tight mb-6">
+					<span class="opacity-40">we are</span><br />
+					<strong>Kenshū.</strong>
 				</h1>
-				<h2 class="text-4xl leadning-none tracking-tight font-light w-3/4">We conduct thorough audits that proactively block potential breaches, securing your systems before any threat can take root.</h2>
+				<h2 class="text-2xl lg:text-4xl md:leading-none tracking-tight font-light opacity-80 md:w-3/4">We conduct thorough audits that proactively block potential breaches, securing your systems before any threat can take root.</h2>
 			</main>
 		</div>
 	</body>
