feat: add dark mode support

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,3 +78,8 @@ body {
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: url("./bg-dark.svg");
+  }
+}
