--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="bg-[#f0f0f0] flex items-end text-neutral-700">
-		<nav class="absolute top-0 right-0 text-right p-8 lg:p-16 text-lg underline ">
+	<body class="bg-[#f0f0f0] flex items-end text-neutral-700 dark:text-neutral-200">
+		<nav class="absolute top-0 right-0 text-right p-8 lg:p-16 text-lg lg:text-xl underline">
 			<ol class="space-y-2">
 				<li>members -</li>
 				<li>audits -</li>
@@ -19,7 +19,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 		<div class="w-full flex min-h-1/2">
 			<div class="flex-1 hidden lg:block" />
-			<main class="flex-1 lg:border-l border-l-black px-8 lg:px-16">
+			<main class="flex-1 lg:border-l border-l-black dark:border-l-neutral-300 px-8 lg:px-16">
 				<h1 class="text-5xl sm:text-6xl leading-none tracking-tight mb-6">
 					<span class="opacity-40">we are</span><br />
 					<strong>Kenshū.</strong>
