--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -20,9 +20,12 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
-<!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="./fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="preload" href="./fonts/Inter-Italic.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="preload" href="./fonts/Inter-Bold.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="preload" href="./fonts/Inter-BoldItalic.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="preload" href="./fonts/Inter-Light.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="preload" href="./fonts/Inter-LightItalic.woff2" as="font" type="font/woff2" crossorigin />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
