feat: implement team page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body class="bg-[#f0f0f0] flex items-end text-neutral-700 dark:text-neutral-200">
 		<nav class="absolute top-0 right-0 text-right p-8 lg:p-16 text-lg lg:text-xl underline">
 			<ol class="space-y-2">
-				<li>members -</li>
+				<li><a href="./members">members -</a></li>
 				<li>audits -</li>
 				<li>blogs -</li>
 			</ol>
@@ -24,7 +24,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					<span class="opacity-40">we are</span><br />
 					<strong>Kenshū.</strong>
 				</h1>
-				<h2 class="text-2xl lg:text-4xl md:leading-none tracking-tight font-light opacity-80 md:w-3/4">We conduct thorough audits that proactively block potential breaches, securing your systems before any threat can take root.</h2>
+				<h2 class="text-2xl lg:text-4xl md:leading-none tracking-tight font-light opacity-80 md:w-3/4" transition:name="tagline">We conduct thorough audits that proactively block potential breaches, securing your systems before any threat can take root.</h2>
 			</main>
 		</div>
 	</body>
