fix: wrong twt url for eva

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -46,7 +46,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 								name: "eva",
 								pfpUrl: "./eva-pfp.jpeg",
 								githubUrl: "https://github.com/xyzeva",
-								xUrl: "https://x.com/xyzeva"
+								xUrl: "https://x.com/xyz3va"
 							}}
 						/>
 					</li>
