--- a/src/components/Member.astro
+++ b/src/components/Member.astro
@@ -11,9 +11,9 @@ interface Props {
 const { info } = Astro.props
 ---
 
-<div class="flex flex-row items-end border-b border-b-neutral-700">
-	<div class="pl-14 pt-14 border-r border-r-neutral-700">
-		<img src={info.pfpUrl} class="w-40 h-40 border-r border-r border-r-neutral-700 translate-x-[1px] translate-y-[1px]" alt={`profile picture of ${info.name}`} />
+<div class="flex flex-row items-center md:items-end border-b border-b-neutral-700">
+	<div class="md:pl-14 md:pt-14 border-r border-r-neutral-700">
+		<img src={info.pfpUrl} class="w-40 h-40 border-r border-r-neutral-700 translate-x-[1px] translate-y-[1px]" alt={`profile picture of ${info.name}`} />
 	</div>
 	<div class="flex flex-col p-8">
 		<p class="flex-1 text-4xl mb-2">{info.name}</p>
