--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body class="bg-[#f0f0f0] flex items-end text-neutral-700 dark:text-neutral-200">
 		<nav class="absolute top-0 right-0 text-right p-8 lg:p-16 text-lg lg:text-xl underline">
 			<ol class="space-y-2">
-				<li><a href="./members">members -</a></li>
+				<li><a href="./team">our team -</a></li>
 				<li>audits -</li>
 				<li>blogs -</li>
 			</ol>
