--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -10,16 +10,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body class="bg-[#f0f0f0] flex flex-col text-neutral-700 dark:text-neutral-200">
-		<nav class="flex border-b border-b-neutral-700">
+		<nav class="flex border-b border-b-neutral-700 dark:border-b-neutral-200">
 			<div class="w-full md:w-1/2 flex flex-row">
-				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 hover:bg-neutral-700 hover:text-neutral-200 text-2xl leading-5 font-bold" href="./">Kenshū</a>
+				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 text-2xl leading-5 font-bold" href="./">Kenshū</a>
 				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
 					<a class="leading-5 text-2xl">audit</a>
 					<a class="leading-5 text-2xl">blogs</a>
 				</div>
 			</div>
 
-			<div class="hidden md:block md:w-1/2 lg:border-l lg:border-l-neutral-700" />
+			<div class="hidden md:block md:w-1/2 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200" />
 		</nav>
 
 		<main class="w-full h-full flex flex-col lg:flex-row">
@@ -29,7 +29,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 					<p class="text-6xl font-bold select-none" aria-hidden>-</p>
 				</div>
 			</div>
-			<div class="w-full lg:w-1/2 border-t border-t-neutral-700 lg:border-t-0 lg:border-l lg:border-l-black">
+			<div class="w-full lg:w-1/2 border-t border-t-neutral-700 dark:border-t-neutral-200 lg:border-t-0 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200">
 				<ul>
 					<li>
 						<Member
