feat: implement blog layout and nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<ol class="space-y-2">
 				<li><a href="./team">our team -</a></li>
 				<li>audits -</li>
-				<li>blogs -</li>
+				<li><a href="./blog">blogs -</a></li>
 			</ol>
 		</nav>
 
