--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,8 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
@@ -10,58 +8,22 @@ type Props = CollectionEntry<'blog'>['data'];
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="w-full h-full">
 	<head>
 		<BaseHead title={title} description={description} />
-		<style>
-			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
-			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				padding: 1em;
-				color: rgb(var(--gray-dark));
-			}
-			.title {
-				margin-bottom: 1em;
-				padding: 1em 0;
-				text-align: center;
-				line-height: 1;
-			}
-			.title h1 {
-				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
-			}
-			.last-updated-on {
-				font-style: italic;
-			}
-		</style>
 	</head>
 
-	<body>
-		<Header />
-		<main>
-			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class="prose">
+	<body class="bg-[#f0f0f0] dark:bg-[#2a2a2a] text-neutral-700 dark:text-neutral-200 w-full h-full">
+		<nav class="flex absolute lg:fixed top-0 w-full lg:w-auto lg:h-full flex-row lg:flex-col border-b border-b-neutral-700 dark:border-b-neutral-200 lg:border-b-0 lg:border-r lg:border-r-neutral-700 lg:dark:border-r-neutral-200">
+
+			<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 lg:border-r-0 lg:border-b lg:border-neutral-700 lg:dark:border-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight hover:bg-[url('/bg-dark.svg')] dark:hover:bg-[url('/bg-light.svg')]" href="/">Kenshū</a>
+
+			<a class="lg:[writing-mode:vertical-lr] lg:rotate-180 flex items-end justify-end lg:justify-center lg:items-start lg:text-center flex-1 leading-5 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 lg:-mr-[1px] lg:-ml-[1px] hover:bg-[url('/bg-dark.svg')] dark:hover:bg-[url('/bg-light.svg')]" href="/blog">All blogs</a>
+
+		</nav>
+		<main class="justify-center pt-40">
+			<article class="m-auto px-8">
+				<div class="m-auto prose prose-headings:text-neutral-700 prose-p:text-neutral-700 prose-a:text-neutral-700 dark:prose-invert dark:prose-headings:text-neutral-200 dark:prose-p:text-neutral-200 dark:prose-a:text-neutral-200">
 					<div class="title">
 						<div class="date">
 							<FormattedDate date={pubDate} />
@@ -80,6 +42,5 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				</div>
 			</article>
 		</main>
-		<Footer />
 	</body>
 </html>
