--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,5 @@
 ---
 import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
@@ -15,97 +13,47 @@ const posts = (await getCollection('blog')).sort(
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			main {
-				width: 960px;
-			}
-			ul {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
-				margin-bottom: 0.5rem;
-				border-radius: 12px;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
-		</style>
 	</head>
-	<body>
-		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
+	<body class="bg-[#f0f0f0] flex flex-col text-neutral-700 dark:text-neutral-200">
+		<nav class="flex border-b border-b-neutral-700 dark:border-b-neutral-200">
+			<div class="w-full md:w-1/2 flex flex-row">
+				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight" href="./">Kenshū</a>
+				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
+					<a class="leading-5 text-2xl" href="/team">our team</a>
+					<a class="leading-5 text-2xl" href="/audit">audit</a>
+				</div>
+			</div>
+
+			<div class="hidden md:block md:w-1/2 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200" />
+		</nav>
+
+		<main class="w-full h-full flex flex-col lg:flex-row">
+			<div class="flex flex-col lg:flex-row w-full lg:w-1/2 items-start justify-start p-8 md:p-24">
+				<div class="flex flex-col items-start lg:items-end w-min mr-40 mb-4">
+					<header class="text-5xl sm:text-6xl font-bold tracking-tight whitespace-nowrap">Blog</header>
+					<p class="text-5xl sm:text-6xl font-bold select-none" aria-hidden>-</p>
+				</div>
+
+				<section>
+					<ul class="space-y-4">
+						{
+							posts.map((post) => (
+								<li>
+									<a class="underline" href={`/blog/${post.slug}/`}>
+										<h4 class="text-xl font-bold">{post.data.title}</h4>
+										<p class="opacity-50">
+											<FormattedDate date={post.data.pubDate} />
+										</p>
+									</a>
+								</li>
+							))
+						}
+					</ul>
+				</section>
+			</div>
+
+			<div class="hidden lg:w-1/2 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200 pr-8 md:pt-24 md:pl-0">
+			</div>
 		</main>
-		<Footer />
 	</body>
 </html>
