fix: nav links on team page

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -12,10 +12,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 	<body class="bg-[#f0f0f0] flex flex-col text-neutral-700 dark:text-neutral-200">
 		<nav class="flex border-b border-b-neutral-700 dark:border-b-neutral-200">
 			<div class="w-full md:w-1/2 flex flex-row">
-				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 text-2xl leading-5 font-bold" href="./">Kenshū</a>
+				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight" href="./">Kenshū</a>
 				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
-					<a class="leading-5 text-2xl">audit</a>
-					<a class="leading-5 text-2xl">blogs</a>
+					<a class="leading-5 text-2xl" href="./audit">audit</a>
+					<a class="leading-5 text-2xl" href="./blog">blogs</a>
 				</div>
 			</div>
 
