feat: tweak team page layout and font size

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -14,8 +14,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 			<div class="w-full md:w-1/2 flex flex-row">
 				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight" href="./">Kenshū</a>
 				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
-					<a class="leading-5 text-2xl" href="./audit">audit</a>
-					<a class="leading-5 text-2xl" href="./blog">blogs</a>
+					<a class="leading-5 text-lg md:text-2xl" href="./audit">audit</a>
+					<a class="leading-5 text-lg md:text-2xl" href="./blog">blogs</a>
 				</div>
 			</div>
 
@@ -25,8 +25,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 		<main class="w-full h-full flex flex-col lg:flex-row">
 			<div class="flex w-full lg:w-1/2 items-start justify-start p-8 md:p-24">
 				<div class="flex flex-col items-start lg:items-end w-min">
-					<header class="text-6xl font-bold tracking-tight whitespace-nowrap">Our team</header>
-					<p class="text-6xl font-bold select-none" aria-hidden>-</p>
+					<header class="text-4xl sm:text-6xl font-bold tracking-tight whitespace-nowrap">Our team</header>
+					<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden>-</p>
 				</div>
 			</div>
 			<div class="w-full lg:w-1/2 border-t border-t-neutral-700 dark:border-t-neutral-200 lg:border-t-0 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200">
