--- a/src/components/Member.astro
+++ b/src/components/Member.astro
@@ -1,25 +1,38 @@
 ---
 interface Props {
-	info: {
-		name: string
-		pfpUrl: string
-		githubUrl: string
-		xUrl: string
-	}
+    info: {
+        name: string;
+        pfpUrl: string;
+        githubUrl: string;
+        xUrl: string;
+    };
 }
 
-const { info } = Astro.props
+const { info } = Astro.props;
 ---
 
-<div class="flex flex-row items-center md:items-end border-b border-b-neutral-700 dark:border-b-neutral-200">
-	<div class="pl-8 md:pl-14 md:pt-14 border-r border-r-neutral-700 dark:border-r-neutral-200">
-		<img src={info.pfpUrl} class="w-20 h-20 md:w-40 md:h-40 translate-x-[1px] translate-y-[1px]" alt={`profile picture of ${info.name}`} />
-	</div>
-	<div class="flex flex-col p-8">
-		<p class="flex-1 text-3xl sm:text-4xl sm:mb-2">{info.name}</p>
-		<div class="flex flex-row items-end space-x-4">
-			<a class="underline text-lg sm:text-xl font-light" href={info.githubUrl}>github</a>
-			<a class="underline text-lg sm:text-xl font-light" href={info.xUrl}>x.com</a>
-		</div>
-	</div>
+<div
+    class="flex flex-row items-center md:items-end border-b border-b-neutral-700 dark:border-b-neutral-200"
+>
+    <div
+        class="pl-8 md:pl-14 md:pt-14 border-r border-r-neutral-700 dark:border-r-neutral-200"
+    >
+        <img
+            src={info.pfpUrl}
+            class="w-20 h-20 md:w-40 md:h-40 translate-x-[1px] translate-y-[1px]"
+            alt={`profile picture of ${info.name}`}
+        />
+    </div>
+    <div class="flex flex-col p-8">
+        <p class="flex-1 text-3xl sm:text-4xl sm:mb-2">{info.name}</p>
+        <div class="flex flex-row items-end space-x-4">
+            <a
+                class="underline text-lg sm:text-xl font-light"
+                href={info.githubUrl}>github</a
+            >
+            <a class="underline text-lg sm:text-xl font-light" href={info.xUrl}
+                >x.com</a
+            >
+        </div>
+    </div>
 </div>
