--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -1,57 +1,72 @@
 ---
-import BaseHead from "../components/BaseHead.astro"
-import Member from "../components/Member.astro"
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
+import BaseHead from "../components/BaseHead.astro";
+import Member from "../components/Member.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body class="bg-[#f0f0f0] flex flex-col text-neutral-700 dark:text-neutral-200">
-		<nav class="flex border-b border-b-neutral-700 dark:border-b-neutral-200">
-			<div class="w-full md:w-1/2 flex flex-row">
-				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight" href="./">Kenshū</a>
-				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
-					<a class="leading-5 text-lg md:text-2xl" href="./audit">audit</a>
-					<a class="leading-5 text-lg md:text-2xl" href="./blog">blogs</a>
-				</div>
-			</div>
+    <head>
+        <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    </head>
+    <body
+        class="bg-[#f0f0f0] flex flex-col text-neutral-700 dark:text-neutral-200"
+    >
+        <nav class="flex border-b border-b-neutral-700">
+            <div class="w-1/2 flex flex-row">
+                <a
+                    class="pl-24 pt-24 flex items-end justify-end border-r border-r-neutral-700 hover:bg-neutral-700 hover:text-neutral-200 text-2xl leading-5 font-bold"
+                    href="./">Kenshū</a
+                >
+                <div
+                    class="flex-1 flex flex-row items-end justify-end space-x-8"
+                >
+                    <a class="leading-5 text-2xl">audit</a>
+                    <a class="leading-5 text-2xl">blogs</a>
+                </div>
+            </div>
 
-			<div class="hidden md:block md:w-1/2 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200" />
-		</nav>
+            <div class="w-1/2 border-l border-l-neutral-700"></div>
+        </nav>
 
-		<main class="w-full h-full flex flex-col lg:flex-row">
-			<div class="flex w-full lg:w-1/2 items-start justify-start p-8 md:p-24">
-				<div class="flex flex-col items-start lg:items-end w-min">
-					<header class="text-4xl sm:text-6xl font-bold tracking-tight whitespace-nowrap">Our team</header>
-					<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden>-</p>
-				</div>
-			</div>
-			<div class="w-full lg:w-1/2 border-t border-t-neutral-700 dark:border-t-neutral-200 lg:border-t-0 lg:border-l lg:border-l-neutral-700 dark:lg:border-l-neutral-200">
-				<ul>
-					<li>
-						<Member
-							info={{
-								name: "mel",
-								pfpUrl: "./mel-pfp.jpeg",
-								githubUrl: "https://github.com/vmfunc",
-								xUrl: "https://x.com/vmfunc"
-							}}
-						/>
+        <main class="w-full h-full flex flex-col md:flex-row">
+            <div class="flex w-1/2 items-start justify-start p-24">
+                <div class="flex flex-col items-end w-min">
+                    <header
+                        class="text-6xl font-bold tracking-tight whitespace-nowrap"
+                    >
+                        Our team
+                    </header>
+                    <p class="text-6xl font-bold select-none" aria-hidden>-</p>
+                    <p class="text-3xl font-bold select-none" aria-hidden>
+                        Founded by reputable and experienced security
+                        researchers in the field.
+                    </p>
+                </div>
+            </div>
+            <div class="w-1/2 lg:border-l border-l-black">
+                <ul>
+                    <li>
+                        <Member
+                            info={{
+                                name: "mel",
+                                pfpUrl: "./mel-pfp.jpeg",
+                                githubUrl: "https://github.com/vmfunc",
+                                xUrl: "https://x.com/vmfunc",
+                            }}
+                        />
 
-						<Member
-							info={{
-								name: "eva",
-								pfpUrl: "./eva-pfp.jpeg",
-								githubUrl: "https://github.com/xyzeva",
-								xUrl: "https://x.com/xyz3va"
-							}}
-						/>
-					</li>
-				</ul>
-			</div>
-		</main>
-	</body>
+                        <Member
+                            info={{
+                                name: "eva",
+                                pfpUrl: "./eva-pfp.jpeg",
+                                githubUrl: "https://github.com/xyzeva",
+                                xUrl: "https://x.com/xyz3va",
+                            }}
+                        />
+                    </li>
+                </ul>
+            </div>
+        </main>
+    </body>
 </html>
