feat: implement audits page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<nav class="absolute top-0 right-0 text-right p-8 lg:p-16 text-lg lg:text-xl underline">
 			<ol class="space-y-2">
 				<li><a href="./team">our team -</a></li>
-				<li>audits -</li>
+				<li><a href="./audits">audits -</a></li>
 				<li><a href="./blog">blogs -</a></li>
 			</ol>
 		</nav>
