fix: typo on audits page

--- a/src/pages/audits.astro
+++ b/src/pages/audits.astro
@@ -27,7 +27,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts"
 			<div class="flex flex-col items-start lg:items-end lg:w-min lg:mr-40 mb-20">
 				<header class="text-4xl leading-4 sm:text-6xl sm:leading-4 font-bold tracking-tighter lg:whitespace-nowrap">Past audits</header>
 				<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden="true">-</p>
-				<h2 class="text-lg lg:text-2xl font-light lg:text-right leading-none">We has worked in reporting and auditing infra for these companies.</h2>
+				<h2 class="text-lg lg:text-2xl font-light lg:text-right leading-none">We have worked in reporting and auditing infra for these companies.</h2>
 				<p class="text-lg leading-3 font-bold select-none" aria-hidden="true">-</p>
 			</div>
 			<ul class="flex flex-wrap gap-14 items-center justify-center">
