fix audits page link on blog page

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,7 +20,7 @@ const posts = (await getCollection('blog')).sort(
 				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight" href="./">Kenshū</a>
 				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
 					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="/team">our team</a>
-					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="/audit">audit</a>
+					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="/audits">audit</a>
 				</div>
 			</div>
 
