fix: wrong aria-hidden attr value on blog page

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -31,7 +31,7 @@ const posts = (await getCollection('blog')).sort(
 			<div class="flex flex-col lg:flex-row w-full items-start justify-start p-8 md:p-24">
 				<div class="flex flex-col items-start lg:items-end w-min mr-40 mb-4">
 					<header class="text-4xl sm:text-6xl font-bold tracking-tight whitespace-nowrap">Blog</header>
-					<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden>-</p>
+					<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden="true">-</p>
 				</div>
 
 				<section>
