fix: heading decoration leading

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -30,7 +30,7 @@ const posts = (await getCollection('blog')).sort(
 		<main class="w-full h-full flex flex-col lg:flex-row">
 			<div class="flex flex-col lg:flex-row w-full items-start justify-start p-8 md:p-24">
 				<div class="flex flex-col items-start lg:items-end w-min mr-40 mb-4">
-					<header class="text-4xl sm:text-6xl font-bold tracking-tight whitespace-nowrap">Blog</header>
+					<header class="text-4xl leading-8 sm:text-6xl sm:leading-8 font-bold tracking-tighter lg:whitespace-nowrap">Blog</header>
 					<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden="true">-</p>
 				</div>
 
