--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -25,7 +25,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		<main class="w-full h-full flex flex-col lg:flex-row">
 			<div class="flex w-full lg:w-1/2 items-start justify-start p-8 md:p-24">
 				<div class="flex flex-col items-start lg:items-end lg:w-min">
-					<header class="text-4xl sm:text-6xl font-bold tracking-tight whitespace-nowrap">Our team</header>
+					<header class="text-4xl leading-4 sm:text-6xl sm:leading-4 font-bold tracking-tighter lg:whitespace-nowrap">Our team</header>
 					<p class="text-4xl sm:text-6xl font-bold select-none" aria-hidden="true">-</p>
                     <h2 class="text-lg lg:text-2xl font-light lg:text-right leading-none">Founded by reputable and experienced security researchers in the field.</h2>
 					<p class="text-lg leading-3 font-bold select-none" aria-hidden="true">-</p>
