--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -37,7 +37,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 						<Member
 							info={{
 								name: "mel",
-								pfpUrl: "./mel-pfp.jpeg",
+								pfpUrl: "/mel-pfp.jpeg",
 								githubUrl: "https://github.com/vmfunc",
 								xUrl: "https://x.com/vmfunc"
 							}}
@@ -46,7 +46,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 						<Member
 							info={{
 								name: "eva",
-								pfpUrl: "./eva-pfp.jpeg",
+								pfpUrl: "/eva-pfp.jpeg",
 								githubUrl: "https://github.com/xyzeva",
 								xUrl: "https://x.com/xyz3va"
 							}}
