--- a/src/pages/audits.astro
+++ b/src/pages/audits.astro
@@ -85,15 +85,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
                     <a href="https://microsoft.com">
                         <picture>
                             <source
-                                srcset="./logos/microsoft-logo-light.png"
+                                srcset="/logos/microsoft-logo-light.png"
                                 media="(prefers-color-scheme: light)"
                             />
                             <source
-                                srcset="./logos/microsoft-logo-dark.png"
+                                srcset="/logos/microsoft-logo-dark.png"
                                 media="(prefers-color-scheme: dark)"
                             />
                             <img
-                                src="./logos/microsoft-logo-light.png"
+                                src="/logos/microsoft-logo-light.png"
                                 class="h-10"
                                 alt="Microsoft"
                             />
@@ -104,15 +104,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
                     <a href="https://paypal.com">
                         <picture>
                             <source
-                                srcset="./logos/paypal-logo-light.png"
+                                srcset="/logos/paypal-logo-light.png"
                                 media="(prefers-color-scheme: light)"
                             />
                             <source
-                                srcset="./logos/paypal-logo-dark.png"
+                                srcset="/logos/paypal-logo-dark.png"
                                 media="(prefers-color-scheme: dark)"
                             />
                             <img
-                                src="./logos/paypal-logo-light.png"
+                                src="/logos/paypal-logo-light.png"
                                 class="h-10"
                                 alt="PayPal"
                             />
@@ -122,7 +122,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
                 <li>
                     <a href="https://a16z.com">
                         <img
-                            src="./logos/a16z.png"
+                            src="/logos/a16z.png"
                             class="h-10"
                             color="black"
                             alt="a16z"
@@ -132,7 +132,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
                 <li>
                     <a href="https://krea.ai">
                         <img
-                            src="./logos/krea.svg"
+                            src="/logos/krea.svg"
                             class="invert dark:invert-0 h-10"
                             alt="krea"
                         />
@@ -140,7 +140,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
                 </li>
                 <li>
                     <a href="https://puter.com">
-                        <img src="./logos/puter.png" class="h-10" alt="Puter" />
+                        <img src="/logos/puter.png" class="h-10" alt="Puter" />
                     </a>
                 </li>
             </ul>
