--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -14,8 +14,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 			<div class="w-full md:w-1/2 flex flex-row">
 				<a class="pl-8 pt-8 md:pl-24 md:pt-24 flex items-end justify-end border-r border-r-neutral-700 dark:border-r-neutral-200 hover:bg-neutral-700 hover:text-neutral-200 dark:hover:bg-neutral-200 dark:hover:text-neutral-700 text-2xl leading-5 font-bold tracking-tight" href="./">Kenshū</a>
 				<div class="flex-1 flex flex-row items-end justify-end space-x-8">
-					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="./audits">audit</a>
-					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="./blog">blogs</a>
+					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="/audits">audit</a>
+					<a class="leading-5 text-lg md:text-2xl md:leading-5" href="/blog">blogs</a>
 				</div>
 			</div>
 
