--- a/src/pages/audits.astro
+++ b/src/pages/audits.astro
@@ -75,7 +75,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
                 <li>
                     <a href="https://midday.ai">
                         <img
-                            src="./logos/midday.svg"
+                            src="/logos/midday.svg"
                             class="dark:invert h-11"
                             alt="midday"
                         />
