--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,7 +63,7 @@ nav li:hover:not(.active)::after {
 
 body {
   font-family: "Inter", "Inter", sans-serif;
-  background-image: url("./bg-light.svg");
+  background-image: url("/bg-light.svg");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -74,6 +74,6 @@ body {
 }
 @media (prefers-color-scheme: dark) {
   body {
-    background-image: url("./bg-dark.svg");
+    background-image: url("/bg-dark.svg");
   }
 }
